@@ -1,3 +1,8 @@
+DAWN-V00-01-03  Satoshi TANAKA  Nov 02, 1999
+- Environmental variable G4DAWN_MULTI_WINDOW is	
+  renamed to G4DAWNFILE_MULTI_WINDOW for DAWN-file driver.
+  (G4DAWN_MULTI_WINDOW	still works for a while.)
+
 DAWN-V00-01-02  Satoshi TANAKA	Nov 01, 1999  
 - Separation of BeginModeling() and FRBeginModeling().
   Co-workable with /run/beamOn with the new vis commands.
